Fixes #1433: Occurrence number hyperlink of event is misaligned for short named events on 'Subject Matrix' page. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1818 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2277,6 +2277,7 @@ span.re_indicator {
     margin-left: 4px;
     margin-right: -20px;
     white-space: nowrap;
+    position: absolute;
 }
 
 table.crfListTable {
@@ -2686,6 +2687,10 @@ a.dnShortcut:hover {
 td.borderHighlight{
 	border-top: 2px solid orange !important; 
 	border-bottom: 2px solid orange !important;
+}
+
+#findSubjects > thead > tr.header > td {
+    min-width: 50px;
 }
 
 td.borderHighlightTop{
